# scLKME

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  installation.rst  references.bib
docs/_static/css/: custom.css
docs/notebooks/tutorials/: index.rst  tutorial_cell_sketching.ipynb  tutorial_kme_analysis.ipynb
notebooks/io/: io_multispecies.ipynb  io_preterm.ipynb
notebooks/preterm_analysis/: kme_analysis.ipynb
src/sclkme/: __init__.py
src/sclkme/io/: __init__.py  read.py
src/sclkme/tools/: __init__.py  _kme.py  _sketch.py  _utils.py
src/sclkme/utils/: __init__.py  _joboutput.py  _workers.py
